sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:10: error: not found: value break
    for (j <- i-1 to 0 by -1) {m = getValeur(j);if (m > v) {setValeur(j+1,m);k = j;break}
                                                                                   ^